# Practicas_preprofesionales_vinculacion_con_la_sociedad

./: .gitignore  29.  INFORME SG MEDICINA HUMANA 2023.docx  README.md  pyproject.toml  run.py
INFORMES 24-46 ERICK/: 24.  INFORME SG CONTAB. Y AUDIT 2023.docx  25.  INFORME SG DERECHO 2023.docx  26.  INFORME SG ECONOMIA 2023.docx  27.  INFORME SG ENFERMERIA 2023.docx  28.  INFORME SG LAB CLINICO 2023.docx  29.  INFORME SG MEDICINA HUMANA 2023.docx  30.  INFORME SG ODONTOLOGIA 2023.docx  31.  INFORME SG PSICOL. CLINICA 2023.docx  32.  INFORME SG ADM. EMPRESAS 2023.docx  33.  INFORME SG CONTABILIDAD Y AUDIT. 2023.docx  34.  INFORME SG DERECHO 2023.docx  35. INFORME SG REPROD. ANIMAL 2025.docx  36. INFORME SG SANIDAD ANIMAL 2025.docx  37. INFORME SG MEDICINA VETERINARIA 2025.docx  38. INFORME SG PRODUC. ANIMAL 2025.docx  39. INFORME SG PED. INGLES COMO LE 2025.docx  40. INFORME SG EDUCACION ESPECIAL 2025.docx  41. INFORME SG EDUCACION BASICA 2025.docx  42. INFORME SG EDUCACION INICIAL 2025.docx  43. INFORME SG ENSEÑANZA DE LL 2025.docx  44. INFORME SG DOCENCIA E INVE EN ES 2025.docx  45. INFORME SG GESTION EDUCAT. 2025.docx  46. INFORME SG DOCENCIA SUPERIOR 2025.docx
PREGUNTAS ABIERTAS/: .~lock.Temas de capacitacion sugerida por los empleadores.xlsx#  B10. Razon porque no trabajo.xlsx  B8. Nombres-emprendimientos.xlsx  C1 Actividades que realiza.xlsx  Cargos y funciones de los graduados(empleadores).xlsx  E2 Que agregarias al plan curricular.xlsx  F13 Nombre de la red.xlsx  F3 Pais ha realizado estudios.xlsx  F6 Temáticas de capacitacion.xlsx  (+1 more)
scratch/: check_e1.py  (+56 more)
(+542 files in other folders)
