[project]
name = "practicas-preprofesionales-reports"
version = "0.1.0"
description = "Modular report synchronization and validation tool between Excel and Word formats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "xlsxwriter>=3.1.0",
    "xlrd>=2.0.1",
    "pyarrow>=15.0.0",
    "ruff>=0.1.0",
]
